<resources>
    <string name="app_name">GainzTrain</string>


    //Arrays to populate tables with default data
    <string-array name="chest_array">
        <item>Bench Press</item>
        <item>Incline Bench Press</item>
        <item>Decline Bench Press</item>
        <item>Dumbbell Bench Press</item>
        <item>Incline Dumbbell Bench Press</item>
        <item>Decline Dumbbell Bench Press</item>
        <item>Dumbbell Fly</item>
        <item>Incline Dumbbell Fly</item>
        <item>Decline Dumbbell Fly</item>
    </string-array>

    <string-array name="tricep_array">
        <item>Rope Push Down</item>
        <item>V-Bar Push Down</item>
        <item>EZ-Bar Skullcrusher</item>
        <item>Pushback</item>
        <item>Close Grip Bench Press</item>
        <item>Single Arm Push Down</item>
        <item>Overhead Tricep Extension</item>
        <item>Single Overhead Tricep Extension</item>
    </string-array>

    <string-array name="bicep_array">
        <item>Barbell Curl</item>
        <item>Dumbbell Concentration Curl</item>
        <item>EZ Barbell Curl</item>
        <item>Preacher Curl</item>
        <item>Cable Curl</item>
        <item>Dumbbell Curl</item>
        <item>Hammer Dumbbell Curl</item>
        <item>Seated Dumbbell Curl</item>
    </string-array>


    <string-array name="back_array">
        <item>Barbell Row</item>
        <item>Dumbbell Row</item>
        <item>Deadlift</item>
        <item>Sumo Deadlift</item>
        <item>Lat Pulldown</item>
        <item>Seated Cable Row</item>
        <item>Seated Wide Cable Row</item>
        <item>T-Bar Row</item>
    </string-array>

    <string-array name="shoulder_array">
        <item>Arnold Dumbbell Press</item>
        <item>Barbell Shrug</item>
        <item>Dumbbell Shrug</item>
        <item>Barbell Military Press</item>
        <item>Dumbbell Military Press</item>
        <item>Front Plate Raise</item>
        <item>Lateral Dumbbell Raise</item>
        <item>Front Dumbbell Raise</item>
        <item>Overhead Press</item>
        <item>Rear Deltoid Dumbbell Raise</item>
    </string-array>

    <string-array name="leg_array">
        <item>Calf Raise</item>
        <item>Deadlift</item>
        <item>Sumo Deadlift</item>
        <item>Barbell Squat</item>
        <item>Glute Raise</item>
        <item>Romanian Deadlift</item>
        <item>Leg Press</item>
    </string-array>

    //Muscle Group Names
    <string name="tricep">Tricep</string>
    <string name="bicep">Bicep</string>
    <string name="chest">Chest</string>
    <string name="leg">Leg</string>
    <string name="back">Back</string>
    <string name="shoulder">Shoulder</string>

    <string-array name="muscle_group_array">
        <item>Tricep</item>
        <item>Bicep</item>
        <item>Chest</item>
        <item>Leg</item>
        <item>Back</item>
        <item>Shoulder</item>
    </string-array>

    <string-array name="weight_or_reps">
        <item>Weight</item>
        <item>Reps</item>
    </string-array>

    //Menu strings
    <string name="menu_history">History</string>
    <string name="menu_workout">Custom Workouts</string>
    <string name="menu_body_tracker">Body Tracker</string>
    <string name="menu_home">Home</string>

    //Home Activity
    <string name="prompt_user">No Current Or Saved Workouts Add One</string>
    <string name="current_workout">Current Workout Session</string>
    <string name="saved_workouts">Saved Workouts</string>

    //AddExerciseActivityStrings
    <string name="select_an_exercise">Select an exercise</string>
    <string name="add_other_exercise">Add Other:</string>
    <string name="submit">Submit</string>
    <string name="emptyEditTextToast">Please add an exercise before submitting</string>

    //Edit Workout Activity
    <string name="weight">Weight: </string>
    <string name="reps">Reps: </string>
    <string name="error_reps">Please add a number of repetitions before submitting</string>
    <string name="error_weight">Please add a weight before submitting</string>
    <string name="previous">Previous</string>
    <string name="current">Current</string>


    //Current Exercise Strings
    <string name="current_exercise_add_exercise">Add Exercise</string>

    //BodyTracker
    <string name="body_tracker_title">Body Tracker</string>
    <string name="edit_weight_error">Please enter a weight</string>
    <string name="info_added">Added Successfully</string>
    <string name="take_photo">Take Photo</string>
    <string name="camera_permission">Please Add Camera Permission To Use This Feature</string>
    <string name="no_user_weight">No Weight Added</string>
    <string name="error_no_weight_entered">Warning weight will not be saved with picture unless value is added!</string>

    <string name="custom_workout_title">Select or Add a Custom Workout</string>
    <string name="add_otherWorkout">Add Other Workout</string>
    <string name="custom_workout_error">Add Workout Before Submitting</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>

    //Widget
    <string name="widget_title" />
    <string name="widget_view_key" translatable="false">widgetKey</string>
    <string name="widget_string">Select a exercise inside of the application to see past workouts</string>
    <string name="update_widget">Update Widget</string>

    //Content Descriptions
    <string name="add_exercise_button">Add Exercise</string>
    <string name="selfie_progress_picture">Selfie Progress Picture</string>
    <string name="add_weight">100</string>
    <string name="add_reps">10</string>
    <string name="lbs">lbs</string>
    <string name="inches">inches</string>
    <string name="custom_workout_button_description">Add custom workout</string>

    //alert dialog
    <string name="edit_user_weight_dialog">Enter a new weight</string>


</resources>
