...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.EnterWorkoutActivity">

    <TextView
        android:id="@+id/enter_workout_current_exercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />
...
            android:hint="@string/add_reps"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_workout_button"
        android:onClick="onClickSubmitWorkout"
        android:text="@string/submit"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/submit"/>

</LinearLayout>
